# helpBot-python

./: .gitignore  README.md  docker-compose-bak.yml  docker-compose.yml  run_compose.sh
app-api/: Dockerfile  pyproject.toml  requirements.txt  start.sh
app-api/app/: auth.py  handlers.py  helpbot.py  main.py  oauth2.py  responses.py  schemas.py  schemas_util.py  settings.py  templates.bak.py  utils.bak.py
app-api/app/backends/: base.bak.py  base.py  openai.py
app-api/static/: swagger-ui.css
app-web/: Dockerfile  pyproject.toml  requirements.txt  start.sh
app-web/app/: api.py  auth.py  email_funcs.py  main.py  oauth.py  redis_funcs.py  settings.py  templates.py  utils.py  validators.py
app-web/app/oauths/: google_oauth.py
volumes/certbot/live/localhost/: cert.pem  chain.pem  privkey.pem
volumes/conf/: .htpasswd  js_auth.js  js_http.js  nginx.conf  nginx_auth.conf  nginx_main.conf  nginx_proxy.conf
volumes/html/_/bs/: styles.css  styles.css.map
volumes/html/_/css/: main.css
volumes/html/_/js/: chatgpt-markdown-state.js  help-bot.js  (+4 more)
volumes/html/_ssi/: footer.html  header.html  navbar.html
volumes/html/en/: api-doc.html  index-llm.html  index.html  pricing.html
volumes/html/uk/: index.html
volumes/schemas/: assistant.json  item.json
volumes/templates/base/: base.html  downbar.html  error.html  errors.html  form.html  messages.html  navbar.html
volumes/templates/en/: api-doc.html  assistants.html  bootstrap.html  form-test.html  index-llm.html  index.html  items.html  pricing.html  privacy.html  terms.html
volumes/templates/ja/: index.html
(+11 files in other folders)
