[tool.poetry]
name = "app-api"
version = "0.1.0"
description = ""
authors = ["Gansik G <gansik@tagv.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
orjson = "^3.10.7"
uvicorn = "^0.30.6"
aiofiles = "^24.1.0"
websockets = "^13.1"
starlette = "^0.39.2"
jsonschema-rs = "^0.22.2"
httpx = "^0.27.2"
openai = "^1.54.4"
python-multipart = "^0.0.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
