[tool.poetry]
name = "app-web"
version = "0.1.0"
description = ""
authors = ["Gansik G <gansik@tagv.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
uvicorn = "^0.30.6"
starlette = "^0.39.2"
httpx = "^0.27.2"
jinja2 = "^3.1.4"
python-multipart = "^0.0.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
